[gd_scene load_steps=10 format=3 uid="uid://bg6ccbmjcw60c"]

[ext_resource type="Script" path="res://Levels/tutorial.gd" id="1_rygiw"]
[ext_resource type="PackedScene" uid="uid://l4cf80wva06r" path="res://hud.tscn" id="2_ngy2a"]
[ext_resource type="PackedScene" uid="uid://dm33dpigusns1" path="res://global.tscn" id="3_d3wfh"]
[ext_resource type="PackedScene" uid="uid://cgfhaqyrqpln8" path="res://Elements/trail.tscn" id="4_2k2ja"]
[ext_resource type="PackedScene" uid="uid://cbt5e46ib3t1q" path="res://player.tscn" id="5_d8vwc"]
[ext_resource type="PackedScene" uid="uid://ccw67vu1muw4u" path="res://Elements/crosshair.tscn" id="6_x825y"]
[ext_resource type="FontFile" uid="uid://dy7w82vef4nkw" path="res://BMSPA___.TTF" id="7_kk2e6"]
[ext_resource type="Script" path="res://typewriter.gd" id="8_kd4i1"]
[ext_resource type="PackedScene" uid="uid://2tjgs0jq74t5" path="res://scene_transition_rect.tscn" id="9_usgno"]

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_rygiw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -656.0
offset_top = -456.0
offset_right = 1936.0
offset_bottom = 1288.0
color = Color(0, 0, 0, 1)

[node name="HUD" parent="." instance=ExtResource("2_ngy2a")]

[node name="Global" parent="." instance=ExtResource("3_d3wfh")]

[node name="line2d" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_2k2ja")]
target = NodePath("../Player")

[node name="Player" parent="." instance=ExtResource("5_d8vwc")]
position = Vector2(632, 304)

[node name="Crosshair" parent="." instance=ExtResource("6_x825y")]

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 304.0
offset_top = 200.0
offset_right = 655.0
offset_bottom = 223.0
theme_override_fonts/font = ExtResource("7_kk2e6")
text = "Use WASD or arrow keys to fly."
script = ExtResource("8_kd4i1")

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 608.0
offset_top = 400.0
offset_right = 959.0
offset_bottom = 423.0
theme_override_fonts/font = ExtResource("7_kk2e6")
text = "Use left mouse button to shoot."
script = ExtResource("8_kd4i1")

[node name="Enemy" type="Area2D" parent="."]
visible = false
position = Vector2(-31, -19)

[node name="Line2D" type="Line2D" parent="Enemy"]
position = Vector2(491.2, 460.6)
rotation = 3.14159
scale = Vector2(0.341504, 0.344363)
points = PackedVector2Array(128, 0, 64, 32, 128, 64)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D3" type="Line2D" parent="Enemy"]
position = Vector2(440, 446)
scale = Vector2(0.116625, 0.118586)
points = PackedVector2Array(128, 0, 64, 32, 128, 64)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D2" type="Line2D" parent="Enemy"]
position = Vector2(478.2, 459.201)
rotation = 3.14159
scale = Vector2(0.2, 0.289528)
points = PackedVector2Array(112, 8, 112, 56)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D" type="Marker2D" parent="Enemy"]
position = Vector2(475.2, 449.6)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemy"]
position = Vector2(463.2, 449.6)
polygon = PackedVector2Array(8, 0, -16, 16, -16, -16)

[node name="Label3" type="Label" parent="."]
visible = false
offset_left = 312.0
offset_top = 480.0
offset_right = 624.0
offset_bottom = 540.0
theme_override_fonts/font = ExtResource("7_kk2e6")
text = "This is a human ship. They've come to mine and colonize your home planet."
autowrap_mode = 2
script = ExtResource("8_kd4i1")

[node name="Friend" type="Area2D" parent="."]
visible = false
position = Vector2(914, 320)
rotation = -3.10556
scale = Vector2(0.2, 0.2)

[node name="Line2D" type="Line2D" parent="Friend"]
position = Vector2(16, 3)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
points = PackedVector2Array(0, -40, 40, -40, 120, 40, 160, 160, 80, 200, 40, 120, -40, 120, -80, 200, -160, 160, -120, 40, -40, -40, 0, -40)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Friend"]
position = Vector2(16, 3)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-40, -40, 40, -40, 120, 40, 160, 160, 80, 200, 40, 120, -40, 120, -80, 200, -160, 160, -120, 40)

[node name="Line2D3" type="Line2D" parent="Friend"]
position = Vector2(15, 61.0191)
rotation = 1.5708
scale = Vector2(1.60032, 0.5)
points = PackedVector2Array(-40, -40, -40, 23.3219, -40, 120)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D2" type="Line2D" parent="Friend"]
position = Vector2(16, 66.7288)
rotation = 1.5708
scale = Vector2(1.43644, 0.5)
points = PackedVector2Array(-40, -40, -40, 120)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D" type="Marker2D" parent="Friend"]
position = Vector2(70, 0)

[node name="Label4" type="Label" parent="."]
visible = false
offset_left = 792.0
offset_top = 200.0
offset_right = 1160.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("7_kk2e6")
text = "These are friendly patrol ships. They fly around the asteroid belts surrounding your planet."
autowrap_mode = 2
script = ExtResource("8_kd4i1")

[node name="Label5" type="Label" parent="."]
visible = false
offset_left = 305.0
offset_top = 432.0
offset_right = 1097.0
offset_bottom = 652.0
theme_override_fonts/font = ExtResource("7_kk2e6")
text = "We have received reports of an imminent invasion comprised of multiple fleets. Our primary objective is to establish a defensive perimeter within the asteroid belt to contain the impending threat. Failure to halt the advancement of the human forces would result in the inevitable demise of our entire species. 

Good luck, Commander.




"
autowrap_mode = 2
script = ExtResource("8_kd4i1")

[node name="SceneTransitionRect" parent="." instance=ExtResource("9_usgno")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(17.68, 1)
next_scene_path = "res://Levels/level1.tscn"
